Authentication and Authorization

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,4 @@
 <p>login works!</p>
+<div class="form-group">
+    <button class="btn btn-primary" (click)="authService.GoogleAuth()">Log in with Google</button>
+</div>
