Adding the Shopping Cart functionality

--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,1 +1,43 @@
-<p>shopping-cart works!</p>
+<h1>Shopping Cart</h1>
+
+<div class="row col-10">
+    <h4>You have {{ cartItemsCount }} item(s) in your shopping cart.</h4>
+    <table class="table">
+        <thead>
+            <tr>
+                <th></th>
+                <th>Product</th>
+                <th class="text-center" style="width: 230px;">Quantity</th>
+                <th class="text-right" style="width: 200px;">Price</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let product of cartProducts">
+                <td>
+                    <div class="img-thumbnail rounded-circle" [style.backgroundImage]="'url(' + product.image + ')'"></div>
+                </td>
+                <td>
+                    {{ product.title }}
+                </td>
+                <td>
+                    <items-quantity
+                        [quantity]="product.quantity"
+                        [productKey]="product.key">
+                    </items-quantity>
+                </td>
+                <td class="text-right">
+                    {{ product.price * product.quantity | currency:'BRL':'symbol' }}
+                </td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <th colspan='3'></th>
+                <th class="text-right">
+                    {{ totalPrice | currency:'BRL':'symbol' }}
+                </th>
+            </tr>
+        </tfoot>
+    </table>
+    <button type="button" class="btn btn-danger" id="clear-shopping-cart" (click)="clearShoppinCart()">Clear Shopping Cart</button>
+</div>
