--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,7 +8,10 @@
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" routerLink="/shopping-cart">Shopping Cart</a>
+                <a class="nav-link" id="shopping-cart-link" routerLink="/shopping-cart">
+                    Shopping Cart
+                    <span class="badge badge-pill badge-warning">{{ cartItemsCount }}</span>
+                </a>
             </li>
             <ng-template #anonymousUser>
                 <li class="nav-item active">
