--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -5,6 +5,12 @@
         <p class="card-text">{{ product.price | currency:'BRL':'symbol' }}</p>
     </div>
     <div *ngIf="displayActions" class="card-footer">
-        <button class="btn btn-primary btn-block">Add to cart</button>
+        <button *ngIf="!product.isItemOnCart; else displayQuantity;" class="btn btn-secondary btn-block" (click)="addToCart()">Add to cart</button>
+        <ng-template #displayQuantity>
+            <items-quantity
+                [quantity]="quantity"
+                [productKey]="key">
+            </items-quantity>
+        </ng-template>
     </div>
 </div>
